--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "gatsby-image": "^2.0.33",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.0",
     "gatsby-plugin-react-helmet": "^3.0.9",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.28",
     "gatsby-source-filesystem": "^2.0.24",
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-id-swiper": "^2.1.0",
+    "react-onclickoutside": "^6.8.0",
+    "react-portal": "^4.2.0",
+    "styled-components": "^4.1.3",
+    "swiper": "^4.5.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
