--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^2.1.0",
