--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-id-swiper": "^2.1.0",
+    "react-insta-stories": "^1.5.1",
     "react-onclickoutside": "^6.8.0",
     "react-portal": "^4.2.0",
     "styled-components": "^4.1.3",
