--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-sharp": "^2.0.28",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.24",
-    "gatsby-source-wordpress": "^3.0.52",
+    "gatsby-source-wordpress": "^3.0.58",
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
@@ -43,7 +43,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "NODE_OPTIONS=--max-old-space-size=8192 npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
