--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-transformer-sharp": "^2.1.17",
     "html-react-parser": "^0.7.1",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.20.0",
     "react": "^16.8.4",
     "react-click-outside": "^3.0.1",
     "react-dom": "^16.8.4",
